# chimorse

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: 01_raw_visualization.ipynb  02_radial_fit_ER.ipynb  03_harmonic_convergence.ipynb  04_fourier_morse.ipynb  05_pruned_fourier_morse.ipynb
src/chimorse/: analysis.py  config.py  dataio.py  fitting.py  fourier.py  models.py  plotting.py
